createが作動しない

--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -1,6 +1,6 @@
 .room-container {
   width: 100%;
-  display: flex;
+  // display: flex;
 }
 
 .room-list {
@@ -36,12 +36,10 @@ table td {
   padding: 10px 20px;
 }
 
-
 .price-icon::before {
   content: "¥";
   padding-right: 3px;
 }
-
 
 .room_btn {
   padding: 0 50px;
@@ -72,7 +70,6 @@ table td {
   margin: 0 5px;
 }
 
-
 .room-show {
   display: flex;
   margin: 0 100px;
@@ -92,3 +89,35 @@ table td {
   padding: 0 0 50px 0;
 }
 
+
+// 検索結果画面
+.room-result {
+  display: flex;
+  padding: 10px;
+}
+
+.room-result-content {
+  width: auto;
+  border: 1px solid #b2b0b0;
+  margin-bottom: 10px;
+}
+
+.room-result-about {
+  padding: 10px;
+}
+
+.room-result-name {
+  font-weight: bold;
+  margin-top: 0;
+  color: rgb(47, 47, 47);
+}
+
+.room-result-eria {
+  margin-top: 0;
+  color: gray;
+}
+
+.room-result-price {
+  text-align: right;
+  color: rgb(47, 47, 47);
+}
