--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,9 @@
+<%= render "devise/shared/error_messages", resource: resource %>
+
 <div class="login-container">
   <h2>新しいアカウントを作成</h2>
 
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource, status: :unprocessable_entity %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), data: { turbo: false }) do |f| %>
 
     <div class="field">
       <span class="red-box">必須</span>
