--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,12 @@
         <div class="h-nav_left">
           <%= link_to image_tag("logo.png"), "/" %>
           <div class="from-family">
-            <input type="text" class="from" placeholder="エリア">
-            <input type="text" class="from" placeholder="キーワード">
+            <%= form_with url: result_path, method: :get, local: true do |f| %>
+              <%= f.search_field :address, placeholder: "エリア" %>
+            <% end %>
+            <%= form_with url: search_path, method: :get, local: true do |f| %>
+              <%= f.search_field :search, placeholder: "キーワード" %>
+            <% end %>
           </div>
         </div>
         <% if user_signed_in? %>
@@ -25,14 +29,20 @@
             <div class="h-nav_user">
               <%= current_user.name %>
             </div>
+            
             <div class="h-nav_image">
-              <% if current_user.image? %>
-                <%= image_tag current_user.image.url, size:"60x60", class:"h-nav_icon" %>
-              <% else %>
-                <%= image_tag 'default_icon.jpeg', size:"60x60", class:"h-nav_icon" %>
-              <% end %>
+              <label for="label1">
+                <% if current_user.image? %>
+                  <%= image_tag current_user.image.url, size:"60x60", class:"h-nav_icon" %>
+                <% else %>
+                  <%= image_tag 'default_icon.jpeg', size:"60x60", class:"h-nav_icon" %>
+                <% end %>
+              </label>
             </div>
-            <ul class="h-nav_manu">
+
+            <input type="checkbox" id="label1" />
+            
+            <ul class="menu" id="h-nav_menu" >
               <li><%= link_to "ルーム登録", new_room_path %></li>
               <li><%= link_to "予約済みルーム一覧", reservations_path %></li>
               <li><%= link_to "登録済みルーム一覧", rooms_path %></li>
