--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -1,7 +1,7 @@
 <div class="content">
 
   <table class="content_inner">
-
+    <%= form_with model: @reservation do |f| %>
       <h2>予約内容確認</h2>
       <tr>
         <h3>
@@ -36,19 +36,20 @@
       </tr>
 
       <tr>
-        <%= form_with model: @reservation do |f| %>
-          <%= f.hidden_field :room_id, value: @room.id %>
-          <%= f.hidden_field :user_id, value: current_user.id %>
-          <%= f.hidden_field :people %>
-          <%= f.hidden_field :start_day %>
-          <%= f.hidden_field :end_day %>
-          <td><%= f.submit "予約を確定する", class:"reservation-btn" %></td>
-        <% end %>
+        <%= f.hidden_field :user_id, value: current_user.id %>
+        <%= f.hidden_field :room_id, value: @reservation.room.id %>
+        <%= f.hidden_field :room_id, value: @reservation.room.id %>
+        <%= f.hidden_field :start_day %>
+        <%= f.hidden_field :end_day %>
+        <%= f.hidden_field :people, value: @reservation.people %>
+        <td>
+          <%= f.submit "予約を確定する", class:"reservation-btn" %>
+        </td>
       </tr>
       <tr>
         <%= link_to "ルーム詳細に戻る", room_path(@room) %>
       </tr>
-
+    <% end %>
   </table>
 
   
