--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -21,7 +21,7 @@ input {
 // ヘッダー
 header {
   width: 100%;
-  // height: 72px;
+  height: 72px;
   background-color: #000;
 }
 
@@ -54,7 +54,6 @@ header {
 
 .h-nav_btn {
   color: #fff;
-
 }
 
 .menu {
@@ -109,7 +108,7 @@ header {
   background-color: aquamarine;
   color: #fff;
   text-align: center;
-  margin-top: -16px;
+  margin-top: -8px;
 }
 
 
@@ -219,6 +218,5 @@ footer {
   font-size: 13px;
   background-color: #000;
   color: #fff;
-  position: relative;
   bottom: 0;
 }
