--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -8,8 +8,12 @@
     <% end %>
     <div class="room-show_about">
       <div class="show-aicon">
-        <% if current_user.image? %>
-          <%= image_tag current_user.image.url, size:"60x60", class:"h-nav_icon" %>
+        <% if user_signed_in? %>
+          <% if current_user.image? %>
+            <%= image_tag current_user.image.url, size:"60x60", class:"h-nav_icon" %>
+          <% else %>
+            <%= image_tag 'default_icon.jpeg', size:"60x60", class:"h-nav_icon" %>
+          <% end %>
         <% else %>
           <%= image_tag 'default_icon.jpeg', size:"60x60", class:"h-nav_icon" %>
         <% end %>
@@ -22,27 +26,27 @@
     </div>
   </div>
 
-  <div class="reserve_room">
+  <div class="reserve-room">
     <%= form_with model: @reservation, method: :get, url: new_reservation_path do |f| %>
       <%= f.hidden_field :room_id, value: @room.id %>
-      <%= f.hidden_field :user_id, value: current_user.id %>
       <h5>
         ¥<%= @room.price %>/日
       </h5>
 
       <%= f.label :start_day, "開始日" %><br>
-      <%= f.date_field :start_day, min: Date.current, required: true %>
+      <%= f.date_field :start_day, min: Date.current, required: true, class:"reserve-from" %><br>
 
       <%= f.label :end_day, "終了日" %><br>
-      <%= f.date_field :end_day, min: Date.current.next_day, required: true %>
+      <%= f.date_field :end_day, min: Date.current.next_day, required: true, class:"reserve-from" %><br>
       
       <%= f.label :people, "人数" %><br>
-      <%= f.number_field :people, required: true, min: 1 %>
+      <%= f.number_field :people, required: true, min: 1, class:"reserve-from" %>
 
       <% if user_signed_in? %>
-        <%= f.submit "予約する", class:"" %>
+        <%= f.submit "予約する", class:"login_btn" %>
+        <%= f.hidden_field :user_id, value: current_user.id %>
       <% else %>
-        <%= link_to "ログイン", new_user_session_path %>
+        <%= link_to "ログイン", new_user_session_path, class: "login_btn" %>
       <% end %>
       
     <% end %>
